# fireblocks-solana-signer

./: .gitignore  Cargo.toml  README.md  RELEASE.md  env-sample  release.toml
.github/: dependabot.yml
.github/workflows/: check.yml  pr-review.yml  release-candidate.yml  release.yml  safety.yml  scheduled.yml  test.yml
examples/: actix_test.rs  lookup.rs  memo.rs  stake.rs
examples/common/: mod.rs
scripts/: README.md  cargo-deps.sh  local-release.sh  pre-commit  version-info.sh
src/: asset.rs  client.rs  error.rs  extensions.rs  jwt.rs  lib.rs  multi.rs  signer.rs  util.rs
src/models/: create_transaction_response.rs  extra_parameters.rs  mod.rs  source_transfer_peer_path.rs  system_message_info.rs  transaction_operation.rs  transaction_request.rs  transaction_response.rs  transaction_status.rs  transaction_sub_status.rs  transfer_peer_path_type.rs
src/signer/: config.rs  keypair.rs  poll.rs
tests/: integration.rs  tokio.rs  utils.rs
tests/test_macros/: Cargo.toml
tests/test_macros/src/: lib.rs
