[package]
name = "fireblocks-solana-signer"
version = "3.0.1"
edition = "2024"
description = "Implementation of a Solana Signer using Fireblocks as backend signer"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
repository = "https://github.com/CarteraMesh/fireblocks-solana-signer"
documentation = "https://docs.rs/fireblocks-solana-signer"
homepage = "https://github.com/CarteraMesh/fireblocks-solana-signer"
keywords = ["solana", "fireblocks", "signer", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[features]
default = []
rustls-tls = ["fireblocks-signer-transport/rustls-tls"]
gpg = ["fireblocks-config/gpg"]

[dependencies]
base64 = { version = "0.22" }
bincode = "1"
bon = "3.6.4"
fireblocks-config = { version = "0.1" }
fireblocks-signer-transport = { version = "0.1" }
log = { version = ">=0.3" }
serde_json = { version = "1" }
solana-hash = { version = "3.0" }
solana-instruction = { version = "3.0" }
solana-keypair = { version = "3.0" }
solana-message = { version = "3.0" }
solana-presigner = "3.0.0"
solana-pubkey = { version = "3.0", features = ["serde"] }
solana-remote-wallet = { version = "3.0.10", default-features = false }
solana-signature = { version = "3.0" }
solana-signer = { version = "3.0" }
solana-transaction = { version = "3.0", features = ["bincode"] }
thiserror = "2"
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = "1"
dotenvy = "0.15"
lazy_static = "1.4.0"
solana-account-decoder = { version = "3.0" }
solana-rpc-client = { version = "3.0", default-features = false }
solana-rpc-client-api = { version = "3.0" }
solana-system-interface = { version = "2", features = ["bincode"] }
spl-memo-interface = { version = "2" }
test_macros = { path = "tests/test_macros" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[lints.rust]
unused_imports = "allow"
deprecated = "allow"

